src/scss/main.scss
//import all arccorp vars
@use "~arccorp-vars/dist/scss/main.scss";

#app {
  color: #414042;
  min-height: 80vh;
  width: 100%;
  display: flex;
  align-items: center;

  .loading {
    color: #dddddd;
    vertical-align: middle;
    width: 100%;
    div {
      text-align: left !important;
    }
    .loading-icon {
      text-align: center !important;
      color: #dddddd;
      display: block;
      font-size: 70px;
      margin: 0 auto;
    }
  }
}

.ada-solutions,
.ada-index,
.ada-cabin, .ada-trip {
  background-position: top center;
  background-size: cover;
  background-repeat: no-repeat;
  .product-header {
    color: main.$white;
  }
  .product-callout-copy {
    max-width: 850px;
    font-family: SourceSansPro-Light, Arial, Helvetica, sans-serif;
    margin-bottom: 120px;
    span {
      color: main.$airfield;
    }
    span.white {
      color: main.$white;
    }
  }

  .ada-solutions-card {
    background: main.$tarmac;
    padding: 45px 30px;
    color: main.$landing;
    border-radius: main.$border-radius-lg;
    font-size: 22px;
    line-height: 28px;
    height: 100%;
    display: flex;
    align-items: center;
    flex-direction: row;
    margin-bottom: 15px;
    &.card-1 {
      background: url("https://www2.arccorp.com/globalassets/products--participation/advanced-data-analytics/ada-solutions-card1.png")
        center center no-repeat;
      background-size: cover;
    }
    span {
      color: main.$airfield;
      font-family: main.$arc-font-semibold;
    }
    span.white {
      color: main.$white;
    }
  }

  .ada-solutions-icon {
    text-align: center;
    img {
      padding-bottom: 20px;
    }
    .ada-solutions-icon-title {
      font-family: main.$arc-font-semibold;
      font-size: 21px;
      line-height: 24px;
      color: main.$white;
      padding-bottom: 20px;
    }
    .ada-solutions-icon-copy {
      margin: 0 auto;
      font-size: 18px;
      line-height: 22px;
      color: main.$landing;
      padding-bottom: 20px;
    }
  }
}

.ada-index {
  .callout-container {
    padding-top: 500px;
  }
  .product-callout-copy {
    border-bottom: 1px solid main.$landing;
    padding-bottom: 120px;
    margin-bottom: 60px;
    max-width: 100%;
  }

  .ada-index-copy {
    max-width: 815px;
  }

  .ada-index-body {
    max-width: 900px;
    margin: 0 auto 120px;
  }

  .ada-index-body-title {
    font-size: 24px;
    font-family: main.$arc-font-semibold;
    text-align: center;
    color: main.$landing;
  }

  .ada-index-icon {
    text-align: center;
  }

  .ada-index-icon-title {
    font-family: main.$arc-font-semibold;
    color: main.$white;
    font-size: 21px;
    line-height: 24px;
    padding-top: 15px;
    padding-bottom: 60px;
  }

  .ada-index-icon-info {
    border-top: 1px solid main.$landing;
    padding-top: 30px;
    padding-bottom: 60px;
  }

  .ada-index-icon-info-copy {
    font-size: 24px;
    line-height: 28px;
    color: main.$landing;
    max-width: 250px;

    span {
      color: main.$white;
      font-family: main.$arc-font-semibold;
    }
  }
}

.ada-cabin, .ada-trip {
  .callout-container {
    padding-top: 160px;
  }
  .product-callout-copy {
    border-bottom: 1px solid main.$landing;
    padding-bottom: 120px;
    margin-bottom: 60px;
    max-width: 100%;
  }

  .ada-index-copy {
    max-width: 815px;
  }
}

.ada-trip {
  .callout-container {
    padding-top: 400px
  } 
}

.advanced-data-analytics-page {
  width: 100%;
  padding-bottom: 120px;

  .callout-box-container {
    padding-top: 120px;
  }

  .arc-sticky-inner {
    background: main.$tarmac;
  }

  .product-eyebrow {
    color: main.$airfield;
  }

  .callout-box {
    border-radius: main.$border-radius-lg;
  }

  .product-header {
    font-family: main.$arc-font-regular;
    .icon-arc-logo {
      font-size: 48px;
    }
  }

  .atd-jumbo {
    padding-top: 340px;
    background-position: top center;

    .ctaBtn {
      color: main.$tarmac;
      background: main.$airfield;
      border-color: main.$airfield;

      &:hover {
        color: main.$tarmac;
        background: main.$airfield;
        border-color: main.$airfield;
        opacity: 0.8;
      }
    }
    .product-callout-copy span {
      color: main.$airfield;
    }
  }
}

